# SimulationBase

./: CMakeLists.txt  FlexiSourceMacro.mac  Geant4Reader.py  Output.mac  README.md  drawSlice.mac  init.mac  initDraw.mac  macroWriter.py  main.cc  spectraReader.py
include/: AnalysisManager.hh  DetectorConstruction.hh  G4PSKermaTrackLength.hh  RunAction.hh  UserScoreWriter.hh
src/: ActionInitialization.cc  AnalysisManager.cc  DetectorConstruction.cc  G4PSKermaTrackLength.cc  PrimaryGeneratorAction.cc  RunAction.cc  UserScoreWriter.cc
